[package]
name = "mueller_sph_rs"
version = "0.3.0"
repository = "https://github.com/cerrno/mueller-sph-rs"
authors = ["Lucas V. Schuermann <lucas@lvs.io>"]
edition = "2021"
license = "MIT"
readme = "README.md"
publish = false

[dependencies]
glium = "0.31"
glam = "0.20"
lazy_static = "1.4"
cgmath = "0.18"
rand = "0.8"
rayon = "1.5"
log = "0.4"
# usually this would be present in a binary-specific section
env_logger = "0.9"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
debug = 0
strip = true
