[package]
name = "mueller_sph_rs"
version = "0.3.2"
repository = "https://github.com/lucas-schuermann/mueller-sph-rs"
authors = ["Lucas V. Schuermann <lucas@lvs.io>"]
edition = "2021"
license = "MIT"
readme = "README.md"
publish = false

[dependencies]
cgmath = "0.18.0"
glium = "0.32.1"
glam = { version = "0.24.0", features = ["fast-math", "scalar-math"] }
rand = "0.8.5"
rayon = "1.7.0"
log = "0.4.20"
env_logger = "0.10.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
debug = 0
strip = true
